Add interim widget with schedule time

--- a/Mailer/app/config/config.neon
+++ b/Mailer/app/config/config.neon
@@ -7,6 +7,7 @@ services:
 	- Remp\Mailer\Forms\MMSTemplateFormFactory('users_with_active_subscriptions', 'users_without_actual_subscriptions')
 	- Remp\Mailer\Forms\GrafdnaTemplateFormFactory('users_with_active_subscriptions', 'users_without_actual_subscriptions')
 	dailyMinuteTemplateFormFactory: Remp\Mailer\Forms\DailyMinuteTemplateFormFactory('minuta-daily-digest')
+	interimTemplateFormFactory: Remp\Mailer\Forms\InterimTemplateFormFactory('subscribers-euobserver-daily')
 	articleUrlParserTemplateFormFactory: Remp\Mailer\Forms\ArticleUrlParserTemplateFormFactory()
 	respektUrlParserTemplateFormFactory: Remp\Mailer\Forms\RespektUrlParserTemplateFormFactory
 	respektArticleParserTemplateFormFactory: Remp\Mailer\Forms\RespektArticleParserTemplateFormFactory
@@ -22,6 +23,7 @@ services:
 	- Remp\Mailer\Components\GeneratorWidgets\Widgets\DailyMinuteWidget\DailyMinuteWidget
 	- Remp\Mailer\Components\GeneratorWidgets\Widgets\RespektUrlParserWidget\RespektUrlParserWidget
 	- Remp\Mailer\Components\GeneratorWidgets\Widgets\RespektArticleParserWidget\RespektArticleParserWidget
+	- Remp\Mailer\Components\GeneratorWidgets\Widgets\InterimWidget\InterimWidget
 
 	- Remp\Mailer\Models\WebClient(@environmentConfig::get('WEB_ADDR'))
 
